# cascade

Test/: Cascade_Echo.java  Cascade_Writer.java  derecho.cfg
Test/writer/: Cascade_Writer.java  derecho.cfg  derecho_default.cfg
dev/dev/: ClientTest.java
dev/dev/echo/: Cascade_Echo.java  derecho.cfg
dev/dev/writer/: Cascade_Writer.java  derecho.cfg
include/cascade/: cascade.hpp  service.hpp
include/cascade/detail/: service_impl.hpp
src/applications/demos/: CMakeLists.txt
src/applications/demos/mapreduce/: CMakeLists.txt  mapper_udl.cpp  mapreduce_interface.hpp  reducer_udl.cpp
src/applications/demos/mapreduce/mapreduce_cfg/: dfgs.json.tmp  udl_dlls.cfg.tmp
src/applications/tests/user_defined_logic/: console_printer_udl.cpp
src/service/java/io/cascade/: Client.java  QueryResults.java
src/service/java/io/cascade/stream/: ShardSupplier.java
src/service/java/io/cascade/test/: ClientTest.java
src/service/java/jni/: cascade_java.cpp  cascade_jni.cpp  io_cascade_Client.h
